Prep for Part 9 - adding banner styles and rearranging some templates

--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -2,8 +2,12 @@
 
 {% block content %}
 
-  <h1>{{ entry.title }}</h1>
+  <div class="content-column">
 
-  {{ entry.richText }}
+    <h1>{{ entry.title }}</h1>
+
+    {{ entry.richText }}
+
+  </div>
 
 {% endblock %}
